Adding category, many minor update
